CI/CD added with build, test and update

--- a/angular.json
+++ b/angular.json
@@ -100,8 +100,23 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "8b7975e8-8852-4727-8856-187812b5211b",
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
