--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.9",
+    "angular-auth-oidc-client": "^19.0.0",
     "blog-web-app": "file:",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
