--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --no-watch --no-progress --browsers=ChromeHeadless",
     "serve:ssr:BlogWebApp": "node dist/blog-web-app/server/server.mjs",
     "lint": "ng lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest --watch",
+    "test:ci": "jest"
   },
   "private": true,
   "dependencies": {
@@ -33,25 +34,24 @@
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.9",
     "@angular/cli": "^18.2.9",
     "@angular/compiler-cli": "^18.2.0",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^18.18.0",
     "angular-eslint": "18.4.0",
     "eslint": "^9.13.0",
     "husky": "^8.0.3",
     "jasmine-core": "~5.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.4.2",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
     "typescript": "~5.5.2",
     "typescript-eslint": "8.10.0"
   },
