--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "serve:ssr:BlogWebApp": "node dist/blog-web-app/server/server.mjs",
     "lint": "ng lint",
     "prepare": "husky install",
     "test": "jest --watch",
@@ -15,34 +14,32 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.6",
-    "@angular/cdk": "^18.2.10",
+    "@angular/cdk": "^19.0.5",
     "@angular/common": "^19.0.6",
     "@angular/compiler": "^19.0.6",
-    "@angular/core": "^19.0.6",
     "@angular/forms": "^19.0.6",
-    "@angular/material": "^18.2.14",
+    "@angular/material": "^19.0.5",
     "@angular/platform-browser": "^19.0.6",
     "@angular/platform-browser-dynamic": "^19.0.6",
     "@angular/platform-server": "^19.0.6",
     "@angular/router": "^19.0.6",
-    "@angular/ssr": "^18.2.9",
     "angular-auth-oidc-client": "^19.0.0",
-    "blog-web-app": "file:",
-    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^19.0.7",
     "@angular/cli": "^19.0.7",
     "@angular/compiler-cli": "^19.0.6",
+    "@angular/core": "^19.0.6",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^18.18.0",
-    "angular-eslint": "18.4.0",
+    "angular-eslint": "19.0.0",
     "eslint": "^9.13.0",
     "husky": "^8.0.3",
     "jasmine-core": "~5.2.0",
