--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,8 +1,9 @@
 {
-  "routes": [
-    {
-      "route": "/*",
-      "rewrite": "/index.html"
-    }
-  ]
+  "navigationFallback": {
+    "rewrite": "/index.html",
+    "exclude": [
+      "images/*.{png,jpg,gif}",
+      "/css/*"
+    ]
+  }
 }
