--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^18.2.14",
     "@angular/animations": "^18.2.0",
     "@angular/cdk": "^18.2.10",
     "@angular/common": "^18.2.0",
